<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.application.yeh.refrigrecip.RefrigMeat"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="@string/btn_text_beef"
            android:id="@+id/btnBeef"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="visible"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="@string/btn_text_pork"
            android:id="@+id/btnPork"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="visible"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="@string/btn_text_chicken"
            android:id="@+id/btnChicken"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="@string/btn_text_duck"
            android:id="@+id/btnDuck"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="visible"
            android:layout_gravity="center_vertical" />

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="@string/btn_text_lamb"
            android:id="@+id/btnLamb"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="visible" />

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="New Button"
            android:id="@+id/button6"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="invisible"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="New Button"
            android:id="@+id/button7"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="invisible" />

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="New Button"
            android:id="@+id/button13"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="invisible" />

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="New Button"
            android:id="@+id/button14"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="New Button"
            android:id="@+id/button15"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="invisible" />

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="New Button"
            android:id="@+id/button16"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="invisible" />

        <Button
            android:layout_width="@dimen/btn_width_uni"
            android:layout_height="@dimen/btn_height_uni"
            android:text="New Button"
            android:id="@+id/button17"
            android:layout_margin="@dimen/btn_margin_uni"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>
